# data-cleaner

./: .gitignore  Dockerfile  README.md  app.py  config.py  file_io.py  file_read.py  imputation.py  main.py  outlier.py  pipeline.py  pyproject.toml  report.py  transform.py
src/: __init__.py
src/cli/: main.py
src/core/: __init__.py  config.py  enums.py  pipeline.py  schema.py
src/io/: __init__.py  file_io.py
src/reports/: __init__.py  cleaning.py  diagnostic.py
src/transforms/: __init__.py  columns.py  deduplicate.py  dtypes.py  imputation.py  outliers.py
