[project]
name = "data-cleaner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies = [
    "faker>=24.0.0,<50.0.0",
    "pandas>=2.2.0,<3.0.0",
    "pandera>=0.18.0,<0.31.0",
    "streamlit>=1.32.0,<2.0.0",
    "altair>=4.2.2,<5.0.0",
    "unidecode>=1.3.0,<2.0.0",
    "openpyxl>=3.1.5",
    "inflection>=0.5.1",
]
